--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,32 @@
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <!-- Essential META Tags -->
+    <meta property="og:title" content="FCC Front End Dev Libs Projects" />
+    <!-- https://ogp.me/#type_website -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://mshuber1981.github.io/FCC-Front-End-Libraries-Projects/fcc.png"
+    />
+    <meta
+      property="og:url"
+      content="https://mshuber1981.github.io/FCC-Front-End-Libraries-Projects/"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Non-Essential, But Recommended -->
+    <meta
+      property="og:description"
+      content="My freecodecamp.org Front End Development Libraries projects."
+    />
+    <meta
+      property="og:site_name"
+      content="freecodecamp.org Front End Development Libraries projects"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="freecodecamp.org Front End Development Libraries certificate"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -42,7 +68,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>FCC Front End Dev Libs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
