--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- Essential META Tags -->
-    <meta property="og:title" content="FCC Front End Dev Libs Projects" />
+    <meta property="og:title" content="FCC Front End Dev Libs projects" />
     <!-- https://ogp.me/#type_website -->
     <meta property="og:type" content="website" />
     <meta
